--- a/index.html
+++ b/index.html
@@ -407,8 +407,8 @@
     <section id="contact-form">
         <div class="row">
           <!-- map -->
-          <div class="col-md-6">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d221204.3014067763!2d31.256761499999996!3d29.970312499999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2seg!4v1728334847903!5m2!1sen!2seg" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <div class="col-md-6 map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d221204.3014067763!2d31.256761499999996!3d29.970312499999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2seg!4v1728334847903!5m2!1sen!2seg" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
           <div class="col-md-6 form-1">
             <h2>We're happy to hear from you</h2>
@@ -417,28 +417,28 @@
               <form class="form-2">
                 <!-- name -->
                 <div class="row">
-                  <div class="col-4">
+                  <div class="col-lg-4">
                     <label for="name">Name</label>
                   </div>
-                  <div class="col-8">
+                  <div class="col-lg-8">
                     <input type="text" name="" id="name" placeholder="your name">
                   </div>
                 </div>
                 <!-- email -->
                 <div class="row">
-                  <div class="col-4">
+                  <div class="col-lg-4">
                     <label for="email">Email</label>
                   </div>
-                  <div class="col-8">
+                  <div class="col-lg-8">
                     <input type="email" name="" id="email" placeholder="your email">
                   </div>
                 </div>
                 <!-- how -->
                 <div class="row">
-                  <div class="col-4">
+                  <div class="col-lg-4">
                     <label for="how">How did you find us?</label>
                   </div>
-                  <div class="col-8">
+                  <div class="col-lg-8">
                     <select name="" id="how">
                       <option value="friends">Friends</option>
                       <option value="social">Social media</option>
@@ -449,17 +449,17 @@
                 </div>
                 <!-- news letter-->
                 <div class="row">
-                  <div class="col-4">
+                  <div class="col-lg-4">
                     <label>News letter</label>
                   </div>
-                  <div class="col-8">
+                  <div class="col-lg-8">
                     <input type="checkbox" name="" id="news" checked>
                     <label for="news">yes, please</label>
                   </div>
                 </div>
                 <!-- drop -->
                 <div class="row">
-                  <div class="col-4">
+                  <div class="col-lg-4">
                     <label for="drop">Drop us a line</label>
                   </div>
                   <div class="col-8">
@@ -468,9 +468,9 @@
                 </div>
                 <!-- btn-->
                 <div class="row">
-                  <div class="col-4">
+                  <div class="col-lg-4">
                   </div>
-                  <div class="col-8">
+                  <div class="col-lg-8">
                     <button class="btn"> send it!</button>
                   </div>
                 </div>
@@ -479,7 +479,7 @@
           </div>
         </div>
     </section>
-
+    
     <footer>
       <div class="container">
         <div class="row">
